Fix: Win10 system default button contrast #296

--- a/userChrome.css
+++ b/userChrome.css
@@ -301,6 +301,7 @@
     --win-disabled-bgcolor: transparent;
     --win-hover-bgcolor: rgb(218, 218, 218); /* also button-bgcolor */
     --win-hover-active-bgcolor: #c2c2c2; /* also button-hover-bgcolor */
+    --win-button-hover-bgcolor: rgba(218, 218, 218, 0.66);
     --win-button-active-bgcolor: #aaaaaa;
     --win-field-bgcolor: #ffffff;
     --win-component-bgcolor: #f2f2f2;
@@ -311,7 +312,6 @@
     --win-sidebar-button-hover-bgcolor: #b8b8b8;
     --win-sidebar-button-hover-active-bgcolor: #a3a3a3;
     --win-button-border: #747474;
-    --win-button-hover-bgcolor: rgba(145, 145, 145, 0.66);
     --win-shorcut-text-color: #757575;
     --win-error-color: #b31616;
     --win-red-border-color: #ff4343;
@@ -329,6 +329,7 @@
       --win-disabled-bgcolor: transparent;
       --win-hover-bgcolor: #2e2e2e; /* also button-bgcolor */
       --win-hover-active-bgcolor: #454545; /* also button-active-color */
+      --win-button-hover-bgcolor: rgba(46, 46, 46, 0.66);
       --win-button-active-bgcolor: #515151;
       --win-field-bgcolor: #373737;
       --win-component-bgcolor: #171717;
@@ -339,7 +340,6 @@
       --win-sidebar-button-hover-bgcolor: #353535;
       --win-sidebar-button-hover-active-bgcolor: #4c4c4c;
       --win-button-border: #8f8f8f;
-      --win-button-hover-bgcolor: rgba(116, 116, 116, 0.66);
       --win-shorcut-text-color: #adadad;
       --win-error-color: #ffb900;
       --win-red-border-color: #ff4343;
@@ -416,7 +416,6 @@
     --toolbarbutton-active-background: var(--win-hover-active-bgcolor) !important;
     --urlbar-box-active-bgcolor: var(--win-hover-active-bgcolor) !important;
     --autocomplete-popup-highlight-background: var(--win-hover-active-bgcolor) !important;
-    --button-hover-bgcolor: var(--win-button-active-bgcolor) !important;
     --panel-banner-item-hover-bgcolor: var(--win-hover-active-bgcolor) !important;
 
     /* Button Hover Active Color */
@@ -427,6 +426,7 @@
     --menuitem-disabled-hover-background-color: var(--win-disabled-bgcolor) !important;
 
     /* Button Hover Color */
+    --button-hover-bgcolor: var(--win-button-hover-bgcolor) !important;
     --checkbox-unchecked-hover-bgcolor: var(--win-button-hover-bgcolor) !important;
     --urlbar-box-hover-bgcolor: var(--win-button-hover-bgcolor) !important;
     --autocomplete-popup-hover-background: var(--win-button-hover-bgcolor) !important;
@@ -528,6 +528,12 @@
   }
 
   /*- Panel ------------------------------------------------------------------*/
+  :root:not(:-moz-lwtheme) .subviewbutton,
+  :root[lwt-default-theme-in-dark-mode] .subviewbutton {
+    --button-hover-bgcolor: var(--win-hover-active-bgcolor) !important;
+    --button-active-bgcolor: var(--win-button-active-bgcolor) !important;
+  }
+
   :root:not(:-moz-lwtheme)
     toolbarbutton.subviewbutton:not([disabled], [open], :active, #appMenu-fxa-label2, #appMenu-zoomReduce-button2, #appMenu-zoomReset-button2, #appMenu-zoomEnlarge-button2, #appMenu-fullscreen-button2):is(:hover),
   :root[lwt-default-theme-in-dark-mode]
